[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry]
name = "dephell_pythons"
version = "0.1.3"
authors = ["Gram <master_fess@mail.ru>"]
description = "Work with python versions"
readme = "README.md"
license = "MIT"
repository = "https://github.com/dephell/dephell"
keywords = ["dephell", "python", "pythons", "interpreter", "pyenv", "asdf", "pip", "pipenv"]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.5"
attrs = "*"
packaging = "*"
dephell-specifier = "*"

[tool.poetry.dev-dependencies]
