[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
tag = "v."

[tool.dephell.flake8]
from = {format = "pip", path = "requirements-flake.txt"}
python = ">=3.6"
command = "flake8"

[tool.dephell.pytest]
from = {format = "poetry", path = "pyproject.toml"}
tests = ["tests", "README.md"]
command = "pytest tests/"

[tool.dephell.typing]
from = {format = "poetry", path = "pyproject.toml"}
command = "mypy --ignore-missing-imports --allow-redefinition dephell_pythons"


[tool.poetry]
name = "dephell_pythons"
version = "0.1.15"
authors = ["Gram <mail@orsinium.dev>"]
description = "Work with python versions"
readme = "README.md"
license = "MIT"
repository = "https://github.com/dephell/dephell_pythons"
keywords = ["dephell", "python", "pythons", "interpreter", "pyenv", "asdf", "pip", "pipenv"]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.6"
attrs = "*"
packaging = "*"
dephell-specifier = "*"
